--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "framer-motion": "^4",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "@types/node": "16.11.7",
